<resources>
    <string name="app_name" translatable="false">FishMania</string>
    <string name="fishmania" translatable="false">Fish Mania!</string>
    <string name="new_game_btn">New Game</string>
    <string name="how_to_play_btn">How To Play</string>
    <string name="login_btn">Login</string>
    <string name="exit_btn">Exit</string>
    <string name="scoreboard_btn">Scoreboard</string>
    <string name="easy_btn">Easy</string>
    <string name="medium_btn">Medium</string>
    <string name="hard_btn">Hard</string>
    <string name="menu_item_music">Play/Pause Music</string>
    <string name="menu_item_language">Language</string>
    <string name="menu_language_english">English</string>
    <string name="menu_language_hebrew">Hebrew</string>
    <string name="username_txt">Username:</string>
    <string name="username_box">Username</string>
    <string name="password_txt">Password:</string>
    <string name="password_box">Password</string>
    <string name="dont_have_an_account">Don\'t Have an Account ?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="email_txt">Email:</string>
    <string name="email_box">Email</string>
    <string name="age_txt">Age:</string>
    <string name="age_box">Age</string><string name="choose_background">Choose Game Background :</string>
    <string name="lets_play_btn">Let\'s Play !</string>
    <string name="choose_fish_color">Choose Fish Color :</string>
    <string name="choose_difficulty">Choose Difficulty :</string>
    <string name="nameIsEmpty">Name is empty!</string>
    <string name="ageIsEmpty">Age is empty!</string>
    <string name="registered">"You are successfully Registered"</string>
    <string name="notRegister">You are not Registered! Try again</string>
    <string name="connected">Connected!</string>
    <string name="checkCredentials">Please Check Your login Credentials</string>
    <string name="emailEmpty">Email is empty!</string>
    <string name="enterValidEmail">Enter the valid email</string>
    <string name="passwordEmpty">Password is empty</string>
    <string name="passwordLength">Length of password is more than 6</string>
    <string name="okButton">OK</string>
    <string name="gameInstructions">Welcome to FishMaia!\nPlay this game in order to improve and discover your mathematical skills with joy!\nplay the easy level to warm up and move on to medium level for sum and hard level for multiplication\nMost importantly Have Fun</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="numberOfEatenFish">Number of eaten fish: </string>
    <string name="score">Score: </string>
    <string name="gameLevel">Game Level: </string>

</resources>