<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NewGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background">

    <ImageView
        android:id="@+id/fishmania_title"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:src="@drawable/fish_mania_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:onClick="openGameOptionActivity"
        android:text="@string/new_game_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishmania_title" />

    <Button
        android:id="@+id/buttonHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="104dp"
        android:text="@string/how_to_play_btn"
        android:background="@drawable/custom_button"
        android:onClick="openHowToPlayDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishmania_title"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/buttonScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/custom_button"
        android:onClick="openScoreboardActivity"
        android:text="@string/scoreboard_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishmania_title"
        app:layout_constraintVertical_bias="0.414" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="85dp"
        android:text="@string/login_btn"
        android:onClick="openLoginActivity"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginEnd="40dp"
        android:text="@string/exit_btn"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />



</androidx.constraintlayout.widget.ConstraintLayout>